--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
-                <span>Visit " <a href="https://the-benn.github.io/Task-5-web/">Villa Agency</a> " to see a sample landing page I built from scratch.</span>
+                <span>Visit " <a href="https://meandevv.github.io/Web-task-5/">Villa Agency</a> " to see a sample landing page I built from scratch.</span>
             </div>
         </div>
     </header>
