--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </div>
                 <p>Web Developer / Advert Producer</p>
                 <div class="socials">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/share/16Jh6oUcSN/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://x.com/ibenjamean?s=09"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/benjamin-kadiri-404597368?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://wa.me/qr/4ZO2HZ3TPRCEK1"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <span>Visit " <a href="https://meandevv.github.io/Web-task-5/">Villa Agency</a> " to see a sample landing page I built from scratch.</span>
             </div>
