--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     </div>
                     <div class="contact">
                         <p>Kadiri Benjamin Francis</p>
-                        <p>+234 816 5521 266</p>
-                        <p>benjamin.fr@yahoo.com</p>
+                        <p>+234 708 0393 332</p>
+                        <p>benjamean.dev@gmail.com</p>
                         <p>www.yoursite.com</p>
                         <p>35, Kudirat Abiola way, Oregun. Ikeja, Lagos.</p>
                     </div>
