--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>Kadiri Benjamin Francis</p>
                         <p>+234 708 0393 332</p>
                         <p>benjamean.dev@gmail.com</p>
-                        <p>www.yoursite.com</p>
+                        <a href="https://meandevv.github.io/TBC/"><p>www.yoursite.com</p></a>
                         <p>35, Kudirat Abiola way, Oregun. Ikeja, Lagos.</p>
                     </div>
                 </div>
