--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
                 <div class="details">
                     <div class="contact">
                         <span>Full name:</span>
-                        <span>Phone:</span>
-                        <span>Email:</span>
-                        <span>Website:</span>
-                        <span>Address:</span>
+                        <p>Kadiri Benjamin Francis</p>
                     </div>
                     <div class="contact">
-                        <p>Kadiri Benjamin Francis</p>
+                        <span>Phone:</span>
                         <p>+234 708 0393 332</p>
-                        <p>benjamean.dev@gmail.com</p>
-                        <a href="https://meandevv.github.io/TBC/"><p>www.TBC.com</p></a>
+                    </div>
+                    <div class="contact">
+                        <span>Email:</span>
+                        <a href="benjamean.dev@gmail.com">Benjamean.dev@gmail.com</a>
+                    </div>
+                    <div class="contact">
+                        <span>Website:</span>
+                        <a href="https://meandevv.github.io/TBC/">www.TBC.com</a>
+                    </div>
+                    <div class="contact">
+                        <span>Address:</span>
                         <p>35, Kudirat Abiola way, Oregun. Ikeja, Lagos.</p>
                     </div>
                 </div>
