--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="contact">
                         <span>Address:</span>
-                        <p>35, Kudirat Abiola way, Oregun. Ikeja, Lagos.</p>
+                        <p class="address">35, Kudirat Abiola way, Oregun. Ikeja, Lagos.</p>
                     </div>
                 </div>
                 <div class="desc">
